# pyChatServer

./: .gitignore  Dockerfile  README.md  client.py  config.example.json  pyproject.toml  schema.json
src/: config.py  generator.py  main.py  server.py
